// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test the component GifGrid debe de mostrar item al cargar imagenes con useFetchGifs 1`] = `
<Fragment>
  <h3>
     
    Goku
     
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="abc"
      key="abc"
      title="hola mundo"
      url="https://gid.png"
    />
  </div>
</Fragment>
`;

exports[`test the component GifGrid test rederer succeful 1`] = `
<Fragment>
  <h3>
     
    Goku
     
  </h3>
  <p>
    Loading
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;
